feat(authentication): revoke token + riot auth verification + change exchange-code response
